	sorted.
	(nnir-group-full-name): Use gnus-group-full-name instead.
	(nnir-artlist-artitem-group, nnir-artlist-artitem-number)
	(nnir-artlist-artitem-rsv, nnir-sort-groups-by-server): Obsolete.

2010-11-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* proto-stream.el: New library to provide protocol-specific
	TLS/STARTTLS connections for IMAP, NNTP, SMTP, POP3 and similar
	protocols.

	* nnimap.el (nnimap-open-connection): Use it.

2010-11-26  Julien Danjou  <julien@danjou.info>

	* color.el: Rename various rgb functions to srgb.

2010-11-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-get-groups): Allow non-quoted strings as mailbox
	names.

2010-11-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-insert): Revert last change.
	(shr-find-fill-point): Never leave point being at bol;
	relax the kinsoku limitation when rendering tables.

2010-11-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-expiry-target-group): Protect against degenerate
	results from -accept-article.

	* shr-color.el: Require cl when compiling.

	* nnheader.el (nnheader-update-marks-actions): Fix typo in last
	checkin.

	* gnus-art.el (gnus-url-mailto): Unfold URLs before using them.

	* nnimap.el (nnimap-request-set-mark): Add is "+", not "-".

	* gnus-sum.el (gnus-summary-push-marks-to-backend): Use 'set instead of
	'add and 'delete to set backend marks.

	* nnmaildir.el (nnmaildir-request-set-mark): Be explicit about 'set.

	* nnheader.el (nnheader-update-marks-actions): Refactor out.

	* nntp.el (nntp-request-set-mark): Use it.

	* nnfolder.el (nnfolder-request-set-mark): Ditto.

	* nnml.el (nnml-request-set-mark): Ditto.

	* nnimap.el (nnimap-last-response-string): Remove the unfolding -- it
	introduces regressions in article selection.
	(nnimap-find-uid-response): New function.
	(nnimap-request-accept-article): Use the UID returned, if any.
	(nnimap-request-move-article): Use the UID returned, if any.